Fix for alignment without additional css, using !important version of classes. Fix for weight and italics.

--- a/style.less
+++ b/style.less
@@ -15,11 +15,12 @@
 		padding-bottom: 0 !important;
 	}
 }
-.sms-heading{
-	&.align-center {text-align: center!important}
-	&.align-left {text-align: left!important}
-	&.align-right {text-align: right!important}
-}
+// .sms-heading{
+// 	&.align-center {text-align: center!important}
+// 	&.align-left {text-align: left!important}
+// 	&.align-right {text-align: right!important}
+// 	&.text-italic {font-style: italic}
+// }
 
 // .section-rsmm-headings > .pl-section-pad{
 // 	padding: 0;
